# crm-driver-service

./: README.md  driver-service-architecture.md  driver-service-interfaces.md  driver-service-specification.md  driver-service-summary.md
driver-service/: .dockerignore  .gitignore  .golangci.yml  GRAPHQL_API.md  GRAPHQL_SETUP.md  Makefile  QUICK_START.md  README.md  config.yaml.example  docker-compose.test.yml  go.mod  go.sum  gqlgen.yml
driver-service/deployments/: PORTAINER.md  PRODUCTION_FIXES.md  SWARM_FIXES.md
driver-service/rust-integration-tests/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.test.yml  init-db.sql  run-tests.sh
driver-service/rust-integration-tests/.github/workflows/: integration-tests.yml
driver-service/rust-integration-tests/benches/: performance_benchmarks.rs
driver-service/rust-integration-tests/src/: clients.rs  config.rs  fixtures.rs  helpers.rs  lib.rs  main.rs
driver-service/rust-integration-tests/src/clients/: api_client.rs  database_client.rs  nats_client.rs
driver-service/rust-integration-tests/src/helpers/: docker_helper.rs  redis_helper.rs  test_utilities.rs
driver-service/rust-integration-tests/src/tests/: database_tests.rs  driver_api_tests.rs  event_tests.rs  integration_scenarios.rs  location_api_tests.rs  performance_tests.rs
driver-service/scripts/: fix-migrations.sh  run-tests.sh
driver-service/tests/: README.md
python-integration-tests/: .env.example  .gitignore  Dockerfile.performance  Dockerfile.tests  Makefile  README.md  config.py  conftest.py  docker-compose.integration-tests.yml  pytest.ini  requirements.txt
python-integration-tests/performance/: locustfile.py
python-integration-tests/tests/: __init__.py  test_driver_api.py  test_grpc_api.py  test_location_api.py  (+2 more)
(+71 files in other folders)
