[package]
name = "driver-service-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client and async runtime
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
hyper = { version = "1.2", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database connectivity
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# UUID and time handling
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# NATS messaging
async-nats = "0.35"

# Testing frameworks
tokio-test = "0.4"
serial_test = "3.1"
mockito = "1.4"

# Configuration and environment
config = "0.14"
dotenv = "0.15"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
once_cell = "1.19"
futures = "0.3"
rand = "0.8"

# Redis client for caching tests
redis = { version = "0.25", features = ["tokio-comp"] }

# gRPC client
tonic = "0.11"
prost = "0.12"

# Docker/testcontainers for integration setup
testcontainers = "0.16"
testcontainers-modules = { version = "0.4", features = ["postgres", "redis"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.5"

[[bin]]
name = "test_runner"
path = "src/main.rs"

[[bench]]
name = "performance_benchmarks"
harness = false